# halvor

./: .env.example  .envrc  .gitignore  .prettierrc  CLAUDE.md  CLUSTER_SETUP_STEPS.md  Cargo.toml  Cross.toml  JOIN_BAULDER.md  K3S_JOIN_GUIDE.md  Makefile  PROVISION_BAULDER.md  README.md  SETUP_EXECUTION_PLAN.md  cleanup-openvpn-test.sh  fix-k8s-repo.sh  halvor-agent.service  test-join.sh  test-openvpn.sh  test-privoxy-vpn.sh
$HOME/pia-vpn/: docker-compose.yml
.cargo/: config.toml
.gitea/workflows/: deploy-experimental.yml  release.yml  sync-to-github.yml
.github/workflows/: GHCR_SETUP.md  README.md  WORKFLOW_TESTING.md  build-docker.yml  build-linux.yml  build-macos.yml  build-pia-vpn.yml  build-windows.yml  build.yml  ci.yml  docs.yml  promote.yml  publish-helm-charts.yml  (+2 more)
charts/: pia-vpn-0.1.0.tgz
compose/: gluetun-pia.docker-compose.yml  media.docker-compose.yml  nginx-proxy-manager.docker-compose.yml  openvpn-pia-portainer.docker-compose.yml  openvpn-pia.docker-compose.yml  portainer.docker-compose.yml
crates/halvor-agent/: Cargo.toml
crates/halvor-agent/src/: lib.rs  main.rs
crates/halvor-agent/src/agent/: api.rs  data_sync.rs  discovery.rs  install.rs  mesh.rs  mesh_protocol.rs  mod.rs  server.rs  sync.rs
crates/halvor-agent/src/apps/: bazarr.rs  gitea.rs  halvor_server.rs  helm_app.rs  mod.rs  nginx_proxy_manager.rs  npm.rs  pia_vpn.rs  portainer.rs  portainer_helm.rs  prowlarr.rs  qbittorrent.rs  radarr.rs  registry.rs  sabnzbd.rs  smb.rs  smb_storage.rs  sonarr.rs  tailscale.rs  traefik_private.rs  traefik_public.rs
crates/halvor-agent/src/apps/k3s/: agent_service.rs  cleanup.rs  init.rs  join.rs  kubeconfig.rs  maintenance.rs  setup.rs  smb_failover.rs  status.rs  tailscale_config.rs  tools.rs  verify.rs
crates/halvor-agent/src/ffi/: c_ffi.rs  mod.rs
crates/halvor-build/: Cargo.toml
crates/halvor-build/src/: common.rs  github.rs  lib.rs  main.rs  zig.rs
crates/halvor-build/src/android/: build.rs  dev.rs  mod.rs
crates/halvor-build/src/apple/: app_store.rs  build.rs  dev.rs  mod.rs
crates/halvor-build/src/cli/: build.rs  dev.rs  mod.rs
crates/halvor-build/src/docker/: build.rs  container.rs  mod.rs
crates/halvor-build/src/web/: build.rs  dev.rs  mod.rs
crates/halvor-cli/: Cargo.toml
crates/halvor-cli/src/: cli_types.rs  lib.rs  main.rs
crates/halvor-cli/src/commands/: agent.rs  backup.rs  build.rs  config.rs  configure.rs  dev.rs  generate.rs  init.rs  install.rs  join.rs  k8s.rs  list.rs  mod.rs  status.rs  sync.rs  uninstall.rs  update.rs  utils.rs
crates/halvor-cli/src/config/: service.rs
crates/halvor-core/: Cargo.toml
crates/halvor-core/src/: lib.rs
crates/halvor-core/src/apps/: helm_app.rs  npm.rs  portainer.rs  registry.rs  smb.rs  tailscale.rs
crates/halvor-core/src/apps/k3s/: mod.rs
crates/halvor-core/src/config/: config_manager.rs  env_file.rs  mod.rs
crates/halvor-core/src/services/: host.rs  mod.rs
crates/halvor-core/src/services/helm/: mod.rs
crates/halvor-core/src/services/k3s/: agent_service.rs  init.rs  join.rs  kubeconfig.rs  maintenance.rs  setup.rs  status.rs  tailscale_config.rs  tools.rs  utils.rs
crates/halvor-core/src/utils/: crypto.rs  exec.rs  exec.rs.bak  ffi_bindings.rs  hostname.rs  mod.rs  service.rs  ssh.rs
crates/halvor-docker/: Cargo.toml
crates/halvor-docker/src/: diagnostics.rs  lib.rs
crates/halvor-openvpn/: Cargo.toml
crates/halvor-openvpn/src/: config.rs  deploy.rs  download.rs  lib.rs  logs.rs  process.rs  test.rs  verify.rs  vpn_utils.rs
crates/halvor-web/: Cargo.toml
crates/halvor-web/src/: api_def.rs  client_gen.rs  lib.rs
docs/: GHCR_SETUP.md  MIGRATION.md  MONOREPO_STATUS.md  ORGANIZATION_COMPLETE.md  agent-architecture.md  architecture-v2.md  architecture.md  cluster-setup.md  compose-to-helm-migration.md  configuration.md  development.md  installation.md  ipv6-setup.md  mesh-architecture.md  multi-platform.md  native-rust-migration.md  refactoring-plan.md  refactoring-steps.md  setup-cluster-guide.md  setup.md  traefik-setup.md  usage.md  vpn-routing.md  vpn-setup.md  vpn-troubleshooting.md  vpn.md  workflows.md
fastlane/: Fastfile
halvor-swift/: project.yml
halvor-web/: Dockerfile  docker-compose.yml  package-lock.json  package.json
openvpn-container/: Dockerfile  README.md
pia-vpn/: Dockerfile
projects/core/: Cargo.toml  lib.rs  main.rs
projects/core/agent/: discovery.rs  mesh.rs  mod.rs  server.rs  sync.rs
projects/core/commands/: agent.rs  backup.rs  build.rs  config.rs  configure.rs  dev.rs  init.rs  install.rs  join.rs  list.rs  mod.rs  status.rs  update.rs
projects/core/config/: config_manager.rs  service.rs
projects/core/db/: migrate.rs
projects/core/db/migrations/: generated.rs
projects/core/services/: agent.rs  apps.rs  mod.rs  npm.rs  smb.rs  sync.rs  tailscale.rs  web.rs
projects/core/services/dev/: apple.rs  cli.rs  mod.rs  web.rs
projects/core/services/docker/: diagnostics.rs  mod.rs
projects/core/services/helm/: mod.rs
projects/core/services/k3s/: agent_service.rs  cleanup.rs  init.rs  join.rs  kubeconfig.rs  maintenance.rs  mod.rs  setup.rs  smb_failover.rs  status.rs  tailscale_config.rs  tools.rs  utils.rs  verify.rs
projects/core/services/pia_vpn/: deploy.rs
projects/core/utils/: crypto.rs  exec.rs  ssh.rs
projects/vpn-container/: Cargo.toml  Dockerfile  README.md  build.sh
projects/vpn-container/src/: download.rs  logs.rs  main.rs  test.rs
releases/: radarr-4k.yaml  radarr.yaml
scripts/: README.md  diagnose-k3s.sh  diagnose-oak-k3s.rs  generate-docs.sh  install-cli.ps1  install.ps1  install.sh  migrate-to-monorepo.sh  setup-agent-service.ps1  setup-agent-service.sh  setup-ssh-hosts.sh  setup-ssh-keys.sh  setup-vpn-firewall.sh  test-vpn-paths.sh  test_makefile_syntax.sh  test_minimal_makefile  test_shell_syntax.sh  validate_makefile_syntax.sh
src/: backup.rs  config.rs  config_manager.rs  crypto.rs  db.rs  docker.rs  exec.rs  lib.rs  main.rs  networking.rs  npm.rs  portainer.rs  provision.rs  smb.rs  ssh.rs  sync.rs  tailscale.rs  update.rs  vpn.rs
vpn-container-privoxy/: Dockerfile
(+259 files in other folders)
