[workspace]
members = [
    "crates/halvor-ffi-macro",
    "crates/halvor-openvpn",
    "crates/halvor-db",
    "crates/halvor-core",
    "crates/halvor-agent",
    "crates/halvor-cli",
    "crates/halvor-build",
    "crates/halvor-docker",
    "crates/halvor-web",
]
resolver = "2"

[workspace.package]
version = "0.0.6"
edition = "2024"
authors = ["Scott Key <scott@scottkey.dev>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0.100"
which = "8.0"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
yaml-rust = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
whoami = "1.4"
flate2 = "1.0"
tar = "0.4"
zip = "7.0.0"
rusqlite = { version = "0.38", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9.2"
glob = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
libc = "0.2"
nix = { version = "0.30.1", default-features = false, features = ["signal", "process"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
regex = "1.10"
tempfile = "3.10"
ctrlc = "3.4"
if-addrs = "0.10"
resolv-conf = "0.7"

