[package]
name = "halvor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Halvor Core Library - Shared business logic and utilities"
license.workspace = true

[lib]
name = "halvor_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies (no CLI, no agent-specific stuff)
anyhow.workspace = true
which.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
yaml-rust.workspace = true
tokio.workspace = true
whoami.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
glob.workspace = true
uuid.workspace = true
libc.workspace = true
nix.workspace = true
dotenv.workspace = true
if-addrs.workspace = true
resolv-conf.workspace = true
tempfile.workspace = true
regex.workspace = true

[features]
default = []

# Dev dependencies (moved from features)
[dev-dependencies]
quote.workspace = true
syn.workspace = true
rusqlite.workspace = true

