[package]
name = "halvor-docker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Halvor Docker Service - Docker installation, configuration, and management"
license.workspace = true

[lib]
name = "halvor_docker"
path = "src/lib.rs"

[dependencies]
halvor-core = { path = "../halvor-core" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

