[package]
name = "pia-vpn-entrypoint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "entrypoint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
zip = "0.6"
regex = "1.10"
nix = { version = "0.28", features = ["process", "signal"] }
tempfile = "3.10"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
if-addrs = "0.10"
resolv-conf = "0.7"
